src/objects/TDR__c.object
<CustomObject>
    <description>A Trade Visit Representative for MTN. These objects should only be viewable by Sys Admin and MTN profiles. Only updatable by Sys Admin and MTN Management Profile</description>
    <fields>
        <fullName>Date_Of_First_Submission__c</fullName>
        <description>The date that this TDR submitted their first submission. I.e. the point when they started work</description>
        <label>Date Of First Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Submission__c</fullName>
        <description>The date that this TDR last submitted a survey</description>
        <label>Date Of Last Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The person object for this TDR. Will contain the bio details for the TDR</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>TDRs</relationshipLabel>
        <relationshipName>TDRs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TDR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TDR-{YY}-{00000000}</displayFormat>
        <label>TDR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>